modals: fix content shift when modal is open

--- a/gitlab.user.styl
+++ b/gitlab.user.styl
@@ -141,6 +141,11 @@
   ::placeholder { color: $lighter !important; }
   ::-webkit-input-placeholder { color: $lighter !important; }
 
+  body {
+    // Fixes content shift when modal is open.
+    &.modal-open { padding-right: 0px !important; }
+  }
+
   h1, h2, h3, h4, h5, h6, p {
     color: var(--light) !important;
   }
